# gcommit

./: .gcmconf.yml  .gcmconfig.yml  .gcommit.yml  .gitignore  Cargo.toml  README.md  test  test.md
.github/workflows/: ci.yml  release.yml
src/: cli.rs  main.rs
src/utils/: mod.rs
