[package]
name = "gcm"
version = "0.1.0"
edition = "2021"
authors = ["Makuza Mugabo Verite <mugaboverite@gmail.com>"]
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.14", features = ["derive"] }
dialoguer = "0.9.0"
inquire = "0.2.1"
