[package]
name = "gcommit"
version = "0.0.3"
edition = "2021"
authors = ["Makuza Mugabo Verite <mugaboverite@gmail.com>"]
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
dialoguer = "0.11.0"
inquire = "0.6.2"
serde = "1.0.188"
serde_yaml = "0.9.25"
yaml-rust = "0.4.5"
