[package]
name = "gcommit"
version = "0.0.9"
edition = "2021"
authors = ["Makuza Mugabo Verite <mugaboverite@gmail.com>"]
description = "A simple conventional commits maker"
readme = "README.md"
license = "MIT"
repository = "https://github.com/veritem/gcommit"
keywords = ["git", "commit", "conventional", "commits"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
console = "0.15.7"
dialoguer = "0.11.0"
inquire = "0.6.2"
serde = {version = "1.0.188", features = ["derive"]}
serde_yaml = "0.9.25"
yaml-rust = "0.4.5"
